# ksuite

./: .gitignore  .gitmodules  CMakeLists.txt  Plugin.cpp  Plugin.h  README.md  api.patch  binjaapi.patch
API/: CMakeLists.txt  ksuiteapi.h  ksuitecore.h  sharedcache.cpp
Shared/: CMakeLists.txt
Tooling/DarwinKernel/: TypeSetter.cpp  Types.h
Tooling/ExportSegmentAsFile/: ExportSegment.h
UI/: DockableSidebar.cpp  DockableSidebar.h  MultiShortcut.cpp  MultiShortcut.h  Notifications.cpp  Notifications.h  RightSideBar.cpp  RightSideBar.h  priv.h  shared.h
UI/Actions/: Actions.cpp  Actions.h  MultiShortcut.cpp  MultiShortcut.h
UI/Callgraph/: BS_thread_pool.hpp  Callgraph.cpp  Callgraph.h  CallgraphGenerator.cpp  CallgraphGenerator.h
UI/DarwinKernel/: TypeSetter.h
UI/SharedCache/: dscpicker.cpp  dscpicker.h  dscwidget.cpp  dscwidget.h
UI/Theme/: CSSBuilder.cpp  CSSBuilder.h  Flattery.h  ThemeEditor.cpp  ThemeEditor.h
UI/theme/: Flattery.cpp  Flattery.h  ThemeInjector.cpp  ThemeInjector.h
Views/: CMakeLists.txt
Views/SharedCache/: CMakeLists.txt  DSCView.cpp  DSCView.h  LoadedImage.h  ObjC.cpp  ObjC.h  SharedCache.cpp  SharedCache.h  VM.cpp  VM.h
Views/SharedCache/old/: SharedCache.cpp  SharedCache.h
Workflows/: DarwinKernel.cpp  DarwinKernel.h  KSuiteMegaWorkflow.cpp  KSuiteMegaWorkflow.h  ObjectiveC.cpp  ObjectiveC.h  ShutUpAboutPAC.cpp  ShutUpAboutPAC.h  VtabRewrites.cpp  VtabRewrites.h
libkbinja/: MetadataSerializable.hpp  hex.h
